--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>bread lang</title>
-    <meta name="UTF-8">
+    <meta charset="UTF-8">
     <meta name="Uma linguagem fácil e rapida">
     <meta name="keywords" description="pão, linguagem de programação pão, bread, lang, breadlang, pão linguagem, rapida, fácil, 2025, quem criou a linguagem de programação pão?">
     <meta name="author" description="Ruan gabriel">
